feat: update project structure with new Docker configurations, enhance health checks, and optimize component imports across the application